--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     environment:
       MYSQL_DATABASE: todo
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_USER: user
+      MYSQL_USER: admin
       MYSQL_PASSWORD: password
       TZ: 'Asia/Tokyo'
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_bin
